# simulator-lc3

./: .gitignore  BUILD_ARCHITECTURE_SUMMARY.md  CITATION.md  CI_OPTIMIZATION_SUMMARY.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_STYLE  COMPREHENSIVE_ANALYSIS_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  DOCUMENTATION_ARCHITECTURE_COMPLETE.md  LICENSE  LICENSE_HEADER.txt  Makefile  PIPELINE_FEATURES.md  PIPELINE_INTEGRATION_GUIDE.md  PROJECT_COMPLETE_SUMMARY.md  PROJECT_NAVIGATION.md  PROJECT_STRUCTURE.md  README.md  REPORTS_INDEX.md  VALIDATION_SUMMARY.md  build.py  build_and_test.py  enhanced_isa_analysis.py  enhanced_isa_analysis_20250629_173600.json  enhanced_isa_analysis_20250629_173649.json  enhanced_isa_analysis_20250629_174105.json  enhanced_isa_analysis_20250629_184332.json  enhanced_isa_analysis_20250630_005323.json  enhanced_mips_benchmark.py  enhanced_mips_benchmark_20250629_173600.json  enhanced_mips_benchmark_20250629_173649.json  isa_design_analysis.py  lc3-simulator.code-workspace  lc3_build.py  main.cpp  mips_benchmark.py  pyproject.toml  pytest.ini  (+4 more)
.github/workflows/: ci.yml  cross_platform_ci.yml  nightly.yml  pr-analysis.yml  release.yml
analysis/: README.md  enhanced_isa_analysis.py  enhanced_mips_benchmark.py  isa_design_analysis.py  mips_benchmark.py
auto-docs/: ANALYSIS_SUMMARY_20250629_173601.json  ANALYSIS_SUMMARY_20250629_173601.md
build_scripts/: build_and_test.bat  build_and_test.sh  validate_pipeline_integration.py
build_system/: README.md  __init__.py  build_commands.py  build_utils.py  builders.py  ci.py  ci_commands.py  clean_commands.py  core.py  dependencies.py  init.sh  packaging.py  script_commands.py  setup_commands.py  test_commands.py  testing.py
data/: README.md  enhanced_isa_analysis_20250629_171215.json  enhanced_mips_benchmark_20250629_171221.json
docs/: BUILD_SYSTEM.md  COMPREHENSIVE_ANALYSIS_SUMMARY.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_REORGANIZATION_COMPLETE.md  INDEX.md  ORIGINAL_README.md  PROJECT_STRUCTURE.md  README.md  REPORTS_INDEX.md
docs/ci/: CI_OPTIMIZATION_SUMMARY.md  CI_WORKFLOW_UPDATE.md  GITHUB_ACTIONS_GUIDE.md  README.md
docs/development/: BUILD_SYSTEM_MIGRATION.md  CLI_TESTING_FRAMEWORK.md  README.md  REPORT_CLEANUP_SUMMARY.md  TEST_CONFIGURATION_FIX.md  TEST_REORGANIZATION.md
docs/project/: PROJECT_CLARITY_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  VISUAL_PROJECT_MAP.md
examples/pipeline/: pipeline_demo.py  pipeline_demo_integrated.c  pipeline_simple_example.py  test_pipeline_integration.c
mem/: CmakeLists.txt  control_store.c  control_store.h  device_register.h  memory.cpp  memory.h  microsequence.h  register.cpp  register.h
pipeline/: CMakeLists.txt  README.md  isa_extension_analyzer.py  pipeline_simulator.c  pipeline_tester.py
python_bindings/: CMakeLists.txt  lc3_simulator.cpp
reports/: COMPREHENSIVE_TEST_COVERAGE_REPORT.md  CONDITION_COVERAGE_ANALYSIS.md  COVERAGE_REPORT.md  ISA_COMPREHENSIVE_PERFORMANCE_REPORT.md  README.md  comprehensive_test_coverage_report.html  detailed_test_report.html  enhanced_isa_analysis_20250629_171215.md  enhanced_mips_benchmark_20250629_171221.md  test_report.html
scripts/: README.md  add_license_headers.py  analyze_coverage.py  auto_documentation.py  benchmark_programs.py  clean_project.py  cleanup_reports.py  debug_test.py  fix_includes.py  fix_python_bindings.py  github_summary.py  helper_functions.py  quick_ci_check.py  run_tests.py  validate_ci_fixes.py  validate_docs.py  validate_project.py
scripts/reports/: test_analysis_summary.json
src/: main.cpp
src/bindings/: CMakeLists.txt
src/core/memory/: CMakeLists.txt  control_store.c  control_store.h  device_register.h  memory.cpp  memory.h  microsequence.h  register.cpp  register.h
src/core/pipeline/: isa_extension_analyzer.py  pipeline_config.h  pipeline_simulator.c  pipeline_simulator.h  pipeline_tester.py
src/core/state_machine/: README.md  ext.cpp  ext.h  signals.cpp  signals.h  state_definitions.h  state_machine.cpp  state_machine.h  state_machine_utils.cpp  states.cpp  states.h
src/core/types/: opcode.h  trap_vector.h  type.h
state_machine/: CmakeLists.txt  ext.cpp  ext.h  signals.cpp  signals.h  state_definitions.h  state_machine.cpp  state_machine.h  states.cpp  states.h
test_programs/: hello.asm  instructions.txt
tests/: README.md  conftest.py  test_basic.py  test_cli.py  test_environment.py  test_environment_setup.py  test_instructions.py  test_integration.py  test_integration_pipeline.py  test_io.py  test_isa_performance.py  test_memory.py  test_pipeline.py  test_runner.py  test_utils.py  test_validation.py
type/: CmakeLists.txt  opcode.h  type.h
